fixed asteroid distortion

--- a/src/Asteroid.css
+++ b/src/Asteroid.css
@@ -4,8 +4,6 @@
   color: #e3dae8;
   font-size: calc(10px + 2vmin);
   padding : 10px 10px 10px 10px;
-  width: 300px;
-  height: 300px;
   margin-right: 10px;
   margin-left: 10px;
   border-radius: 50%;
@@ -21,8 +19,6 @@
   color: #e3dae8;
   font-size: calc(10px + 2vmin);
   padding : 10px 10px 10px 10px; 
-  width: 300px;
-  height: 300px;
   margin-right: 10px;
   margin-left: 10px;
   border-radius: 50%;
